# astrein

./: .gitignore  README.md  astrein.cabal  stack.yaml
app/: Main.hs
astrein/: astrein.cabal  query.md
astrein-haskell/: astrein-haskell.cabal  query.md
astrein-haskell/Language/ASTrein/AST/: Haskell.hs
astrein-haskell/Language/ASTrein/AST/Haskell/: Name.hs
astrein-haskell/app/: Main.hs
astrein-rust/: astrein-rust.cabal  query.md
astrein-rust/Language/ASTrein/AST/: Rust.hs
astrein-rust/app/: Main.hs
astrein/app/: Main.hs
astrein/src/Language/: ASTrein.hs
astrein/src/Language/ASTrein/: AST.hs  Display.hs  LanguageMain.hs  QueryParser.hs  Util.hs
astrein/src/Language/ASTrein/AST/: Simple.hs  Template.hs
astrein/test/: ParserSpec.hs
src/Language/: ASTrein.hs
src/Language/ASTrein/: AST.hs  Display.hs  Query.hs  Util.hs
src/Language/ASTrein/AST/: Haskell.hs  Simple.hs  Template.hs
