name:                astrein
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ibabushkin/astrein#readme
license:             BSD3
license-file:        LICENSE
author:              Inokentiy Babushkin
maintainer:          inokentiy.babushkin@googlemail.com
copyright:           Copyright: (c) 2016 Inokentiy Babushkin
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.ASTrein
                     , Language.ASTrein.AST
                     , Language.ASTrein.AST.Haskell
                     , Language.ASTrein.AST.Simple
                     , Language.ASTrein.AST.Template
                     , Language.ASTrein.Util
  build-depends:       attoparsec >= 0.13.0.2
                     , base >= 4.7 && < 5
                     , haskell-src-exts >= 1.18.2
                     , text >= 1.2.2.1
  default-language:    Haskell2010

executable astrein-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , astrein
  default-language:    Haskell2010

test-suite astrein-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , astrein
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ibabushkin/astrein
