name:                astrein-haskell
version:             0.2.0.0
synopsis:            astrein's haskell mode
description:         Please see README.md
homepage:            https://github.com/ibabushkin/astrein#readme
license:             BSD3
license-file:        LICENSE
author:              Inokentiy Babushkin
maintainer:          inokentiy.babushkin@googlemail.com
copyright:           Copyright: (c) 2016 Inokentiy Babushkin
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Language.ASTrein.AST.Haskell
  build-depends:       attoparsec >= 0.13.0.2
                     , astrein == 0.2.0.0
                     , base >= 4.7 && < 5
                     , haskell-src-exts >= 1.18.2
                     , text >= 1.2.2.1
  default-language:    Haskell2010

executable astrein-haskell
  main-is:             Main.hs
  hs-source-dirs:         app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , astrein == 0.2.0.0
                     , astrein-haskell == 0.2.0.0
                     , haskell-src-exts >= 1.18.2
                     , text >= 1.2.2.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ibabushkin/astrein
