name:                astrein-rust
version:             1.0.0.0
synopsis:            ASTrein's rust backend
description:         Please see README.md
homepage:            https://github.com/ibabushkin/astrein#readme
license:             BSD3
license-file:        LICENSE
author:              Inokentiy Babushkin
maintainer:          inokentiy.babushkin@googlemail.com
copyright:           Copyright: (c) 2016 Inokentiy Babushkin
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Language.ASTrein.AST.Rust
  build-depends:       aeson >= 0.11
                     , astrein == 1.0.0.0
                     , base >= 4.7 && < 5
                     , text >= 1.2.2.1
  default-language:    Haskell2010

executable astrein-rust
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , astrein == 1.0.0.0
                     , astrein-rust == 1.0.0.0
                     , text >= 1.2.2.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ibabushkin/astrein
