name:                astrein
version:             1.0.0.0
synopsis:            A library and tool to query AST's for definitions of names
description:         Please see README.md
homepage:            https://github.com/ibabushkin/astrein#readme
license:             BSD3
license-file:        LICENSE
author:              Inokentiy Babushkin
maintainer:          inokentiy.babushkin@googlemail.com
copyright:           Copyright: (c) 2016 Inokentiy Babushkin
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.ASTrein
                     , Language.ASTrein.AST
                     , Language.ASTrein.Display
                     , Language.ASTrein.LanguageMain
                     , Language.ASTrein.QueryParser
  build-depends:       attoparsec >= 0.13.0.2
                     , base >= 4.7 && < 5
                     , text >= 1.2.2.1
  default-language:    Haskell2010

executable astrein
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , astrein
                     , haskell-src-exts >= 1.18.2
                     , process >= 1.4.2.0
                     , text >= 1.2.2.1
  default-language:    Haskell2010

test-suite astrein-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , astrein
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ibabushkin/astrein
